--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
   "name": "mc-litecat-buzz",
-=======
-  "name": "wyhxrhx",
->>>>>>> 9ca12173c616f1bee61b26b7fe91f67afee72ee2
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,23 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-<<<<<<< HEAD
     "swup": "^4.0.0",
     "tailwindcss": "^3.3.3",
     "three": "^0.154.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
-=======
-    "axios": "^1.2.2",
-    "clipboard": "^2.0.11",
-    "generate-avatar": "^1.4.10",
-    "highlight.js": "^11.7.0",
-    "typescript": "^5.0.4",
-    "unplugin-auto-import": "^0.12.1",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "yaml": "^2.2.1"
->>>>>>> 9ca12173c616f1bee61b26b7fe91f67afee72ee2
+    "vue-router": "^4.2.4",
+    "axios": "^1.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
